tooling/nargo_cli/tests/snapshots/execution_success/xor/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _3",
    "private parameters indices : [_0]",
    "public parameters indices : [_1]",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:32 bits []",
    "BLACKBOX::RANGE [_1]:32 bits []",
    "BLACKBOX::XOR [_0, _1]:32 bits [_2]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) -10 ]], outputs: [_3]",
    "EXPR [ (1, _2, _3) (-10, _3) -1 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "jZDBCoMwDIbfJWcPzjk3+ipjSK1RCqEtsR0M8d0XRTc9DHZpmvz5EvKP0GKT+tq6zg+g7iM0bIlsX5M3OlrvpDpOGWxpHRlRSrDThQqa0UVQLhFl8NSUlqYhaLfEqFnUPAN0rUQZ2FnC+TdlXzr/jZbFypbXD3z5m65OK13dDvRDMm0sH66FApT0n0HJzlLeaR7MVjeEqxtdcmZnTnyFTdnsC+wNtolxHr1osuwN",
  "file_map": {
    "50": {
      "source": "fn main(x: u32, y: pub u32) {\n    let m = x ^ y;\n\n    assert(m != 10);\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
