tooling/nargo_cli/tests/snapshots/execution_success/xor/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/7VSSQ7DIAwM0Krtucm9T8ABgrnlK41K/v+EbliyXHoKGQkZZtAwGFT3hXmNY5mrslZlfROcYpyu7CP9rR2YpwRxc6l2G0AzL2cn73McMzi42zEtGKwPy4SAEDA8RnQuo8eYlhRtAu8yrCG5vH4QeV6zZ2BT8d0a3jTwWktI9ecRVYWT2kXUgemmYR/Jv9/H354qdxzYvBf31EybG2UgP/qMx+4XWmi09yzyqfb5oBMwlbMI11J7xlE/n6ajQk+RBAAA",
  "debug_symbols": "lY7LCsIwEEX/ZdZZaK1V8isiJY9JGQhJyEOQ0H83LS0UceNuztwzl6mgUZZpJGd8Av6oYL0SmbxrVKFbVykIt1DKImbgfccAnW7DbWZgyCLw62l+Mrj80ofzpg/3L73/R28gI1lL03h8sa1fIpKQFjc0xalDmt9hT/b7EL1CXSIuTWvW6j8=",
  "file_map": {
    "50": {
      "source": "fn main(x: u32, y: pub u32) {\n    let m = x ^ y;\n\n    assert(m != 10);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_invert"
  ]
}
